Implementing all the Details using multiple APi as well as same APi and starter of my batis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.application.name=registrationForm
 spring.datasource.url=jdbc:postgresql://localhost:5432/form
 spring.datasource.username=postgres
@@ -10,3 +11,5 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.transaction.coordinator_class=jdbc
 server.error.include-message=always
 
+mybatis.mapper-locations=classpath:/mappers/*.xml
+mybatis.type-aliases-package=com.codehimalaya.registrationform.form.model
